更新 格式化